# ikf-skills

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOGS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  LEARNINGS.md  PLAN_SUMMARY.md  QUICK_START.md  README.md  STREAMING_FIX_SUMMARY.md  main.py  pyproject.toml  railway.env.example  railway.json  sandbox_plan_summary.md  vercel.env.example
agents/social-media/: AGENTS.md
artifacts/conv_779c243cb88b/: ikf-linkedin-hygiene-check-20260130-155415.md
artifacts/conv_d78bf8dc7930/: social-media-hygiene-check-ikf-20260129-180036.md
backend/agents/harness/: __init__.py
backend/agents/performance-marketing/: AGENTS.md
backend/app/: agent_factory.py  config.py  main.py
backend/app/db/: conversations.py
references/examples/: hygiene_check_sample.txt
results/: tavily_advanced_search_result.txt  tavily_basic_search_result.txt
skills/audience-analysis/: SKILL.md
skills/company-research/: SKILL.md
skills/content-strategy/: SKILL.md
skills/content-strategy/references/: linkedin-best-practices.md
skills/docxmaker/: SKILL.md
skills/docxmaker/references/: formatting-guide.md
skills/docxmaker/scripts/: generator.py
skills/general/mdmaker/: SKILL.md
skills/linkedin-profile-audit/: SKILL.md
src/agents/: __init__.py  skills_registry.py
src/backend/: .gitignore  config.py  main.py  pyproject.toml
src/content_marketing_agent/: .env.example  agent.py
src/frontend/: env.example  main.py  package-lock.json  package.json
src/frontend-v2/: .gitignore  package-lock.json  package.json
(+106 files in other folders)
